refactor code for better testability